--- a/views/edit_credentials.ejs
+++ b/views/edit_credentials.ejs
@@ -22,13 +22,14 @@
                             <div class="col-md-6">
                                 <label for="image" class="form-label">Select Image</label>
                                 <input type="file" name="image" class="form-control form-control-sm" />
-                                <img src="/<%= credential.image %>" width="100" class="img-thumbnail mt-1">
+                                <img src="/uploads/<%= credential.image %>" width="100" class="img-thumbnail mt-1">
                             </div>
                         </div>
                         <input type="hidden" name="old_image" value="<%= credential.image %>">
-                        <div class="col-md-10">
+                        <div class="col-md-10 pt-2">
                             <input type="submit" name="submit" value="Update Resident" class="btn btn-success" />
-                            <button type="button" class="btn btn-outline-secondary" onclick="cancelEdit()">Cancel</button>
+                            <button type="button" class="btn btn-outline-secondary pb-2" onclick="cancelEdit()">Cancel</button>
+                            <p class="fs-10 text-muted pt-2">Last updated: <%= dateFormat(credential.updatedAt) %></p>
                         </div>
                     </form>
                 </div>
