--- a/views/add_credentials.ejs
+++ b/views/add_credentials.ejs
@@ -1,25 +1,30 @@
-<%- include('layout/header') %>
+<%- include('layout/header2') %>
+
 
 <div class="p4">
     <div class="row">
         <div >
             <div class="card shadow">
                 <div class="card-header bg-primary" style="cursor: default;">
-                    <h4 class="text-light">Add New User</h4>
+                    <h4 class="text-light">Add New User
+                        <button type="button" class="btn-close btn-sm float-end" aria-label="Close" onclick="cancelEdit()"></button>
+                    </h4>
                 </div>
                 <div class="card-body p4">
                     <form action="/add" method="post" id="add-form" enctype="multipart/form-data">
                         <div class="row g-3">
-                            <div class="col-md-6">
+                            <div class="col-md-4">
                                 <label for="email" class="form-label">Email</label>
                                 <input type="email" name="email" class="form-control form-control-sm" placeholder="Enter email" required />
                             </div>
-                            <div class="col-md-6">
+                            <div class="col-md-4">
                                 <label for="password" class="form-label">Password</label>
-                                <input type="password" name="password" class="form-control form-control-sm" placeholder="Enter password" autocomplete="new-password" />
+                                <input type="password" name="password" class="form-control form-control-sm" placeholder="Enter password" autocomplete="new-password" id="password" />
                             </div>
-
-                            <div class="col-md-6">
+                            <div class="showPassword col-md-2 pt-4 fs-12 thin">
+                                <input type="checkbox" onclick="showHidePassword()"> Show Password
+                            </div>
+                            <div class="col-md-4">
                                 <label for="image" class="form-label">Select Image</label>
                                 <input type="file" name="image" class="form-control form-control-sm" required />
                             </div>
@@ -41,4 +46,16 @@
       window.history.back(); // Example: Go back to the previous page
     }
 </script>
+<script>
+    function showHidePassword() { 
+      var x = document.getElementById("password"); 
+      if (x.type === "password") {
+          x.type = "text"; 
+        } else { 
+          x.type = "password"; 
+        }
+    };
+  </script>
+
+
 <%- include('layout/footer2') %>
