--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,6 +19,7 @@
                                 <th>Image</th>
                                 <th>Email</th>
                                 <th>Password (bcrypt)</th>
+                                <th></th>
                                 <th>Action</th>
                             </tr>
                         </thead>
@@ -29,6 +30,7 @@
                                 <td><img src="/uploads/<%= row.image %>" width="50" class="img-thumbnail"></td>
                                 <td><b><%= row.email %></b></td>
                                 <td><%= row.password %> </td>
+                                <td><b class="badge rounded-pill bg-primary"><%= checkDate(row.createdAt) %></b></td>
                                 <td>
                                    <a href="/edit/<%= row._id %>" class="text-success"><i class="fas fa-edit mx-1 fs-6"></i></a> 
                                    <a href="/delete/<%= row._id %>" class="text-danger"><i class="fas fa-trash mx-1 fs-6"></i></a> 
