--- a/views/layout/header2.ejs
+++ b/views/layout/header2.ejs
@@ -61,11 +61,11 @@
                 <span class="navbar-toggle-icon"><i class="fas fa-bars me-1"></i></span>
             </button>
             <div id="my-nav" class="collapse navbar-collapse">
-                <ul class="navbar-nav ms-auto">
+                <!-- <ul class="navbar-nav ms-auto">
                     <li class="nav-item active me-3">
                         <a class="'nav-link" href="/add"><i class="fas fa-user-plus me-1"></i>Add User</a>
                     </li>
-                </ul>
+                </ul> -->
             </div>
         <!-- </div> -->
     </nav>
