--- a/views/add_credentials.ejs
+++ b/views/add_credentials.ejs
@@ -3,8 +3,8 @@
 
 <div class="p4">
     <div class="row">
-        <div >
-            <div class="card shadow">
+        <div class="container">
+            <div class="card shadow w-50 center">
                 <div class="card-header bg-primary" style="cursor: default;">
                     <h4 class="text-light">Add New User
                         <button type="button" class="btn-close btn-sm float-end" aria-label="Close" onclick="cancelEdit()"></button>
@@ -13,7 +13,7 @@
                 <div class="card-body p4">
                     <form action="/add" method="post" id="add-form" enctype="multipart/form-data">
                         <div class="row g-3">
-                            <div class="col-md-4">
+                            <div class="col-md-6">
                                 <label for="email" class="form-label">Email</label>
                                 <input type="email" name="email" class="form-control form-control-sm" placeholder="Enter email" required />
                             </div>
@@ -21,16 +21,17 @@
                                 <label for="password" class="form-label">Password</label>
                                 <input type="password" name="password" class="form-control form-control-sm" placeholder="Enter password" autocomplete="new-password" id="password" />
                             </div>
-                            <div class="showPassword col-md-2 pt-4 fs-12 thin">
+                            <div class="showPassword col-md-2 pt-4 fs-10 thin">
                                 <input type="checkbox" onclick="showHidePassword()"> Show Password
                             </div>
                             <div class="col-md-4">
                                 <label for="image" class="form-label">Select Image</label>
                                 <input type="file" name="image" class="form-control form-control-sm" required />
+                                <img src onerror="this.src='/images/No_Image_Available.jpg'" width="100" class="img-thumbnail mt-1 img">
                             </div>
                         </div>
                         <div class="col-md-10 mt-4">
-                            <input type="submit" name="submit" value="Add Resident" class="btn btn-primary" />
+                            <input type="submit" name="submit" value="Add User" class="btn btn-primary" />
                             <button type="button" class="btn btn-outline-secondary" onclick="cancelEdit()">Cancel</button>
                         </div>
                         
