--- a/views/edit_credentials.ejs
+++ b/views/edit_credentials.ejs
@@ -3,8 +3,8 @@
 
 <div class="p4">
     <div class="row">
-        <div>
-            <div class="card shadow">
+        <div class="container">
+            <div class="card shadow w-50 center">
                 <div class="card-header bg-success" style="cursor: default;">
                     <h4 class="text-light thin"><b>Edit User</b> (<%= credential.email %>)
                         <button type="button" class="btn-close btn-sm float-end" aria-label="Close" onclick="cancelEdit()"></button>
@@ -13,7 +13,7 @@
                 <div class="card-body p4">
                     <form action="/update/<%= credential._id %>" method="post" id="update-form" enctype="multipart/form-data" >
                         <div class="row g-3">
-                            <div class="col-md-4">
+                            <div class="col-md-6">
                                 <label for="email" class="form-label">Email</label>
                                 <input type="email" name="email" class="form-control form-control-sm" placeholder="Enter email" value="<%= credential.email %>" />
                             </div>
@@ -33,9 +33,9 @@
                         </div>
                         <input type="hidden" name="old_image" value="<%= credential.image %>">
                         <div class="col-md-10 pt-2">
-                            <input type="submit" name="submit" value="Update Resident" class="btn btn-success" />
+                            <input type="submit" name="submit" value="Update User" class="btn btn-success" />
                             <button type="button" class="btn btn-outline-secondary pb-2" onclick="cancelEdit()">Cancel</button>
-                            <p class="fs-10 text-muted pt-2">Last updated: <%= dateFormat(credential.updatedAt) %></p>
+                            <p class="fs-10 text-muted pt-2">Modified: <%= dateFormat(credential.updatedAt) %></p>
                         </div>
                     </form>
                 </div>
