--- a/views/layout/footer.ejs
+++ b/views/layout/footer.ejs
@@ -15,8 +15,8 @@
             order: [0, 'desc'],
             language: {
                 entries: {
-                    _: 'residents',
-                    1: 'resident'
+                    _: 'users',
+                    1: 'user'
                 }
             },
             lengthMenu: [
