--- a/views/layout/header2.ejs
+++ b/views/layout/header2.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title><%= locals.title ? title : 'Login System' %></title>
-    <link rel="icon" href="./favicon.ico?v=2" type="image/x-icon">
+    <link rel="icon" href="/favicon.ico?v=2" type="image/x-icon">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.3.3/css/bootstrap.min.css" integrity="sha512-jnSuA4Ss2PkkikSOLtYs8BlYIeeIK1h99ty4YfvRPAlzr377vr3CXDb7sb7eEEBYjDtcYj+AjBH3FLv5uSJuXg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.datatables.net/v/bs5/dt-2.1.8/datatables.min.css" rel="stylesheet">
@@ -46,6 +46,12 @@
             opacity: 0.5;
             font-style: italic;
         }
+        .center {
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 70%;
+        }
     </style>
 </head>
 <body>
@@ -53,7 +59,7 @@
         <!-- <div class="container"> -->
             <div class="navbar-brands fs-4" style="cursor: default;">
                 <span class="semiBold text-primary ps-4">Maintenance</span>
-                <span class="thin text-primary">|&nbsp;User Profile</span>
+                <span class="thin text-primary">|&nbsp;</span>
             </div>
             <button class="navbar-toggler" data-bs-target="#my-nav"
                 data-bs-toggle="collapse" aria-controls="my-nav" aria-expanded="false"
