--- a/views/add_credentials.ejs
+++ b/views/add_credentials.ejs
@@ -1,7 +1,7 @@
 <%- include('layout/header2') %>
 
 
-<div class="p4">
+<div class="p-5">
     <div class="row">
         <div class="container">
             <div class="card shadow w-50 center">
@@ -10,27 +10,22 @@
                         <button type="button" class="btn-close btn-sm float-end" aria-label="Close" onclick="cancelEdit()"></button>
                     </h4>
                 </div>
-                <div class="card-body p4">
+                <div class="card-body p-4">
                     <form action="/add" method="post" id="add-form" enctype="multipart/form-data">
                         <div class="row g-3">
-                            <div class="col-md-6">
-                                <label for="email" class="form-label">Email</label>
-                                <input type="email" name="email" class="form-control form-control-sm" placeholder="Enter email" required />
+                            <div class="col-md-2">
+                                <label for="username" class="form-label">Username</label>
+                                <input type="text" name="username" class="form-control form-control-sm" placeholder="Enter username" required />
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-8">
                                 <label for="password" class="form-label">Password</label>
                                 <input type="password" name="password" class="form-control form-control-sm" placeholder="Enter password" autocomplete="new-password" id="password" />
                             </div>
-                            <div class="showPassword col-md-2 pt-4 fs-10 thin">
-                                <input type="checkbox" onclick="showHidePassword()"> Show Password
-                            </div>
-                            <div class="col-md-4">
-                                <label for="image" class="form-label">Select Image</label>
-                                <input type="file" name="image" class="form-control form-control-sm" required />
-                                <img src onerror="this.src='/images/No_Image_Available.jpg'" width="100" class="img-thumbnail mt-1 img">
+                            <div class="col-md-1 p-4 me-2">
+                                <i class="fas fa-eye-slash" id="togglePassword"></i>
                             </div>
                         </div>
-                        <div class="col-md-10 mt-4">
+                        <div class="col-md-10 mt-4 pt-6">
                             <input type="submit" name="submit" value="Add User" class="btn btn-primary" />
                             <button type="button" class="btn btn-outline-secondary" onclick="cancelEdit()">Cancel</button>
                         </div>
@@ -47,16 +42,7 @@
       window.history.back(); // Example: Go back to the previous page
     }
 </script>
-<script>
-    function showHidePassword() { 
-      var x = document.getElementById("password"); 
-      if (x.type === "password") {
-          x.type = "text"; 
-        } else { 
-          x.type = "password"; 
-        }
-    };
-  </script>
 
 
-<%- include('layout/footer2') %>
+
+<%- include('layout/footer') %>
