--- a/views/edit_credentials.ejs
+++ b/views/edit_credentials.ejs
@@ -1,38 +1,31 @@
 <%- include('layout/header2') %>
 
 
-<div class="p4">
+<div class="p-5">
     <div class="row">
         <div class="container">
             <div class="card shadow w-50 center">
                 <div class="card-header bg-success" style="cursor: default;">
-                    <h4 class="text-light thin"><b>Edit User</b> (<%= credential.email %>)
+                    <h4 class="text-light thin"><b>Edit User</b> (<%= credential.username %>)
                         <button type="button" class="btn-close btn-sm float-end" aria-label="Close" onclick="cancelEdit()"></button>
                     </h4>
                 </div>
-                <div class="card-body p4">
+                <div class="card-body p-4">
                     <form action="/update/<%= credential._id %>" method="post" id="update-form" enctype="multipart/form-data" >
                         <div class="row g-3">
-                            <div class="col-md-6">
-                                <label for="email" class="form-label">Email</label>
-                                <input type="email" name="email" class="form-control form-control-sm" placeholder="Enter email" value="<%= credential.email %>" />
+                            <div class="col-md-2">
+                                <label for="username" class="form-label">Username</label>
+                                <input type="text" name="username" class="form-control form-control-sm" placeholder="Enter username" value="<%= credential.username %>" />
                             </div>
-                            <div class="col-md-4">
+                            <div class="col-md-8">
                                 <label for="password" class="form-label">Password</label>
-                                <input type="password" name="password" class="form-control form-control-sm" placeholder="Enter password" autocomplete="new-password" id="password"
-                                value="<%= credential.password %>" />
+                                <input type="password" name="password" class="form-control form-control-sm" placeholder="Enter password" autocomplete="new-password" id="password" value="<%= credential.token %>" />                                
                             </div>
-                            <div class="showPassword col-md-2 pt-4 thin fs-12" >
-                                <input type="checkbox" onclick="showHidePassword()"> Show Password
-                            </div>
-                            <div class="col-md-4">
-                                <label for="image" class="form-label">Select Image</label>
-                                <input type="file" name="image" class="form-control form-control-sm" />
-                                <img src="/uploads/<%= credential.image %>" width="100" class="img-thumbnail mt-1">
+                            <div class="col-md-1 p-4 me-2">
+                                <i class="fas fa-eye-slash" id="togglePassword"></i>
                             </div>
                         </div>
-                        <input type="hidden" name="old_image" value="<%= credential.image %>">
-                        <div class="col-md-10 pt-2">
+                        <div class="col-md-10 mt-5 pe-5">
                             <input type="submit" name="submit" value="Update User" class="btn btn-success" />
                             <button type="button" class="btn btn-outline-secondary pb-2" onclick="cancelEdit()">Cancel</button>
                             <p class="fs-10 text-muted pt-2">Modified: <%= dateFormat(credential.updatedAt) %></p>
@@ -43,22 +36,7 @@
         </div>
     </div>
 </div>
-<script>
-    function cancelEdit() {
-      // Redirect to the previous page or perform other actions to cancel the edit
-      window.history.back(); // Example: Go back to the previous page
-    }
-</script>
-<script>
-    function showHidePassword() { 
-      var x = document.getElementById("password"); 
-      if (x.type === "password") {
-          x.type = "text"; 
-        } else { 
-          x.type = "password"; 
-        }
-    };
-  </script>
 
 
-<%- include('layout/footer2') %>
+
+<%- include('layout/footer') %>
